Fixing z-index issue
git-svn-id: https://socorro.googlecode.com/svn/trunk@1278 efcc4bdc-162a-0410-a8af-5b4b46c5376d

--- a/webapp-php/css/screen.css
+++ b/webapp-php/css/screen.css
@@ -137,7 +137,7 @@ html {
 	right: 0;
 	bottom: 2.46em;
 	color: #6699cc;
-        z-index: 2;
+        z-index: 3;
 	}
 	#top-nav a {
 		text-decoration: none;
